Fix bug with long words that overflow content box

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,3 +3,10 @@
   margin: 0;
   font-family: "Times New Roman", Times, serif;
 }
+
+p,
+h1,
+h2,
+h3 {
+  word-break: break-all;
+}
